implementation of jib for generation images OCI Distroless